// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows numbers as value 1`] = `
.c4 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c4 > i {
  display: none;
}

.c1 {
  position: fixed;
  opacity: 0;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c0:focus ~ .c2 > div > .c3 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c0:checked ~ .c2 > div > .c3 {
  background-color: #248700;
  border-color: #248700;
}

.c0:checked ~ .c2 > div > .c3 > i {
  display: block;
}

.c0:disabled ~ .c2 > div > .c3 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0:disabled ~ .c2 > div > div {
  color: #d8d8d8;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <input
    aria-invalid="false"
    class="c0 c1"
    data-testid="hidden-input"
    id="the-group-name_1"
    name="the-group-name"
    type="checkbox"
    value="1"
  />
  <label
    class="c2"
    data-testid="checkbox-label"
    for="the-group-name_1"
  >
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
    >
      <span
        class="c3 c4"
        data-testid="fake-input"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </span>
      <div
        class=""
      >
        <span
          class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
        >
          A label
        </span>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox disabled can be disabled 1`] = `
<ColoredTextProvider
  className=""
  isError={false}
  tag="div"
>
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        A label
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox disabled can be disabled 2`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox disabled can be disabled and checked 1`] = `
<ColoredTextProvider
  className=""
  isError={false}
  tag="div"
>
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        A label
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox disabled can be disabled and checked 2`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error feedback state 1`] = `
.c0 {
  color: #c12335;
}

<ColoredTextProvider
  className="c0"
  isError={true}
  tag="div"
>
  <div
    className="c0"
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some error
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox error can have an error feedback state 2`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error message 1`] = `
.c0 {
  color: #c12335;
}

<ColoredTextProvider
  className="c0"
  isError={true}
  tag="div"
>
  <div
    className="c0"
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some error
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox error can have an error message 2`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error message 3`] = `
.c0 {
  border-radius: 4px;
  background-color: #fff6f8;
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  text-align: left;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

<InputFeedback
  feedback="error"
  id="the-group-namethe-value_error-message"
>
  <Styled(Component)
    feedback="error"
    id="the-group-namethe-value_error-message"
    inset={3}
    role="alert"
  >
    <StyledComponent
      feedback="error"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      id="the-group-namethe-value_error-message"
      inset={3}
      role="alert"
    >
      <Component
        className="c0"
        feedback="error"
        id="the-group-namethe-value_error-message"
        inset={3}
        role="alert"
      >
        <Box
          className="c0"
          id="the-group-namethe-value_error-message"
          inline={false}
          inset={3}
          role="alert"
          tag="div"
        >
          <div
            className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 c0"
            id="the-group-namethe-value_error-message"
            role="alert"
          >
            <Paragraph
              align="left"
              bold={false}
              invert={false}
              size="small"
            >
              <Paragraph__StyledParagraph
                align="left"
                bold={false}
                invert={false}
                size="small"
              >
                <StyledComponent
                  align="left"
                  bold={false}
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Paragraph__StyledParagraph-efl81j-0",
                        "isStatic": false,
                        "lastClassName": "c1",
                        "rules": Array [
                          [Function],
                          "word-wrap: break-word;",
                          "padding: 0;",
                          "margin: 0;",
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                          "sup {",
                          "top: -0.5em;",
                          "font-size: 0.875rem;",
                          "position: relative;",
                          "vertical-align: baseline;",
                          "padding-left: 0.1em;",
                          "}",
                        ],
                      },
                      "displayName": "Paragraph__StyledParagraph",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Paragraph__StyledParagraph-efl81j-0",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  invert={false}
                  size="small"
                >
                  <p
                    className="c1"
                    size="small"
                  >
                    Error message
                  </p>
                </StyledComponent>
              </Paragraph__StyledParagraph>
            </Paragraph>
          </div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</InputFeedback>
`;

exports[`Checkbox error does not appear as an error when it is checked 1`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c4:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c4:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c3 div > .c0 {
  border-color: #c12335;
}

.c4:focus ~ .c3 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #c12335;
}

.c4:checked ~ .c3 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c4:checked ~ .c3 > div > .c0 > i {
  display: block;
}

.c4:disabled ~ .c3 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox focusing can be focused and unfocused 1`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox focusing can be focused and unfocused 2`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox has a fake checkbox 1`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "height: 20px;",
              "width: 20px;",
              "min-height: 20px;",
              "min-width: 20px;",
              "outline: 0;",
              "line-height: 0;",
              "display: flex;",
              "align-items: center;",
              "justify-content: center;",
              "cursor: pointer;",
              "margin-top: 0.125rem;",
              "transition: border-color 0.1s linear, background-color 0.1s linear;",
              "border-width: 1px;",
              "border-style: solid;",
              "border-radius: 4px;",
              "border-color: #54595f;",
              "background-color: #fff;",
              "& > i {",
              "display: none;",
              "}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0 c1"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": true,
          "lastClassName": "c1",
          "rules": Array [
            "height: 20px;",
            "width: 20px;",
            "min-height: 20px;",
            "min-width: 20px;",
            "outline: 0;",
            "line-height: 0;",
            "display: flex;",
            "align-items: center;",
            "justify-content: center;",
            "cursor: pointer;",
            "margin-top: 0.125rem;",
            "transition: border-color 0.1s linear, background-color 0.1s linear;",
            "border-width: 1px;",
            "border-style: solid;",
            "border-radius: 4px;",
            "border-color: #54595f;",
            "background-color: #fff;",
            "& > i {",
            "display: none;",
            "}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "c0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0 c1"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<span
    className="c0 c1"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox must have a label 1`] = `
Array [
  .c1 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c1 > i {
  display: none;
}

.c3:focus ~ .c2 > div > .c0 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c3:checked ~ .c2 > div > .c0 {
  background-color: #248700;
  border-color: #248700;
}

.c3:checked ~ .c2 > div > .c0 > i {
  display: block;
}

.c3:disabled ~ .c2 > div > .c0 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

<div
    className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
  >
    <Checkbox__FakeCheckbox
      data-testid="fake-input"
    >
      <StyledComponent
        data-testid="fake-input"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "c0",
              "isStatic": true,
              "lastClassName": "c1",
              "rules": Array [
                "height: 20px;",
                "width: 20px;",
                "min-height: 20px;",
                "min-width: 20px;",
                "outline: 0;",
                "line-height: 0;",
                "display: flex;",
                "align-items: center;",
                "justify-content: center;",
                "cursor: pointer;",
                "margin-top: 0.125rem;",
                "transition: border-color 0.1s linear, background-color 0.1s linear;",
                "border-width: 1px;",
                "border-style: solid;",
                "border-radius: 4px;",
                "border-color: #54595f;",
                "background-color: #fff;",
                "& > i {",
                "display: none;",
                "}",
              ],
            },
            "displayName": "Checkbox__FakeCheckbox",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "c0",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <span
          className="c0 c1"
          data-testid="fake-input"
        >
          <DecorativeIcon
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <Icon
              aria-hidden="true"
              size={16}
              symbol="checkmark"
              variant="inverted"
            >
              <i
                aria-hidden="true"
                className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
              />
            </Icon>
          </DecorativeIcon>
        </span>
      </StyledComponent>
    </Checkbox__FakeCheckbox>
    <Styled(ColoredTextProvider)
      isError={false}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "lastClassName": "uTxCW",
              "rules": Array [
                [Function],
              ],
            },
            "displayName": "Styled(ColoredTextProvider)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isError={false}
      >
        <ColoredTextProvider
          className=""
          isError={false}
          tag="div"
        >
          <div
            className=""
          >
            <Text
              block={false}
              bold={false}
              invert={false}
              size="base"
            >
              <span
                className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
              >
                Some label
              </span>
            </Text>
          </div>
        </ColoredTextProvider>
      </StyledComponent>
    </Styled(ColoredTextProvider)>
  </div>,
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some label
      </span>
    </Text>
  </div>,
]
`;

exports[`Checkbox renders 1`] = `
.c4 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c4 > i {
  display: none;
}

.c1 {
  position: fixed;
  opacity: 0;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c0:focus ~ .c2 > div > .c3 {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

.c0:checked ~ .c2 > div > .c3 {
  background-color: #248700;
  border-color: #248700;
}

.c0:checked ~ .c2 > div > .c3 > i {
  display: block;
}

.c0:disabled ~ .c2 > div > .c3 {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0:disabled ~ .c2 > div > div {
  color: #d8d8d8;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <input
    aria-invalid="false"
    class="c0 c1"
    data-testid="hidden-input"
    id="the-group-name_the-value"
    name="the-group-name"
    type="checkbox"
    value="the-value"
  />
  <label
    class="c2"
    data-testid="checkbox-label"
    for="the-group-name_the-value"
  >
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
    >
      <span
        class="c3 c4"
        data-testid="fake-input"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </span>
      <div
        class=""
      >
        <span
          class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
        >
          A label
        </span>
      </div>
    </div>
  </label>
</div>
`;
